# AI-101

./: README.md  language_learning.md  pyproject.toml
ai_101/: .gitignore  function_call.ipynb  multi_round_chat.ipynb  rag.ipynb
ai_101/tools/: message.py
knowledge_prepare/: data_structures_algorithms.md  design_patterns.md  docker.md  kubernetes.md  language_learning.md  mysql.md  postgres.md  readme.md  redis.md
