[project]
name = "AI-101"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lipore", email = "lipore@163.com"},
]
dependencies = ["OpenAI>=2.2.0", "dotenv>=0.9.9", "pymilvus[milvus_lite]>=2.6.2"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
